@@ -755,97 +755,6 @@ operator|new
 name|Random
 argument_list|()
 decl_stmt|;
-DECL|field|cachLock
-specifier|private
-name|Object
-name|cachLock
-init|=
-operator|new
-name|Object
-argument_list|()
-decl_stmt|;
-comment|// since the state shouldn't change often, should be very cheap reads
-DECL|field|urlLists
-specifier|private
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|urlLists
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-argument_list|()
-decl_stmt|;
-DECL|field|leaderUrlLists
-specifier|private
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|leaderUrlLists
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-argument_list|()
-decl_stmt|;
-DECL|field|replicasLists
-specifier|private
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|replicasLists
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-argument_list|()
-decl_stmt|;
-DECL|field|lastClusterStateHashCode
-specifier|private
-specifier|volatile
-name|int
-name|lastClusterStateHashCode
-decl_stmt|;
 DECL|field|updatesToLeaders
 specifier|private
 specifier|final
@@ -3463,23 +3372,13 @@ operator|.
 name|getLiveNodes
 argument_list|()
 decl_stmt|;
-synchronized|synchronized
-init|(
-name|cachLock
-init|)
-block|{
 name|List
 argument_list|<
 name|String
 argument_list|>
 name|leaderUrlList
 init|=
-name|leaderUrlLists
-operator|.
-name|get
-argument_list|(
-name|collection
-argument_list|)
+literal|null
 decl_stmt|;
 name|List
 argument_list|<
@@ -3487,12 +3386,7 @@ name|String
 argument_list|>
 name|urlList
 init|=
-name|urlLists
-operator|.
-name|get
-argument_list|(
-name|collection
-argument_list|)
+literal|null
 decl_stmt|;
 name|List
 argument_list|<
@@ -3500,42 +3394,8 @@ name|String
 argument_list|>
 name|replicasList
 init|=
-name|replicasLists
-operator|.
-name|get
-argument_list|(
-name|collection
-argument_list|)
+literal|null
 decl_stmt|;
-if|if
-condition|(
-operator|(
-name|sendToLeaders
-operator|&&
-name|leaderUrlList
-operator|==
-literal|null
-operator|)
-operator|||
-operator|(
-operator|!
-name|sendToLeaders
-operator|&&
-name|urlList
-operator|==
-literal|null
-operator|)
-operator|||
-name|clusterState
-operator|.
-name|hashCode
-argument_list|()
-operator|!=
-name|this
-operator|.
-name|lastClusterStateHashCode
-condition|)
-block|{
 comment|// build a map of unique nodes
 comment|// TODO: allow filtering by group, role, etc
 name|Map
@@ -3712,31 +3572,9 @@ condition|(
 name|sendToLeaders
 condition|)
 block|{
-name|this
-operator|.
-name|leaderUrlLists
-operator|.
-name|put
-argument_list|(
-name|collection
-argument_list|,
-name|urlList2
-argument_list|)
-expr_stmt|;
 name|leaderUrlList
 operator|=
 name|urlList2
-expr_stmt|;
-name|this
-operator|.
-name|replicasLists
-operator|.
-name|put
-argument_list|(
-name|collection
-argument_list|,
-name|replicas
-argument_list|)
 expr_stmt|;
 name|replicasList
 operator|=
@@ -3745,30 +3583,9 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|this
-operator|.
-name|urlLists
-operator|.
-name|put
-argument_list|(
-name|collection
-argument_list|,
-name|urlList2
-argument_list|)
-expr_stmt|;
 name|urlList
 operator|=
 name|urlList2
-expr_stmt|;
-block|}
-name|this
-operator|.
-name|lastClusterStateHashCode
-operator|=
-name|clusterState
-operator|.
-name|hashCode
-argument_list|()
 expr_stmt|;
 block|}
 if|if
@@ -3879,7 +3696,6 @@ argument_list|(
 name|theReplicas
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 comment|// System.out.println("########################## MAKING REQUEST TO " +
@@ -4184,78 +4000,6 @@ parameter_list|()
 block|{
 return|return
 name|updatesToLeaders
-return|;
-block|}
-end_function
-
-begin_comment
-comment|// for tests
-end_comment
-
-begin_function
-DECL|method|getUrlLists
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|getUrlLists
-parameter_list|()
-block|{
-return|return
-name|urlLists
-return|;
-block|}
-end_function
-
-begin_comment
-comment|//for tests
-end_comment
-
-begin_function
-DECL|method|getLeaderUrlLists
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|getLeaderUrlLists
-parameter_list|()
-block|{
-return|return
-name|leaderUrlLists
-return|;
-block|}
-end_function
-
-begin_comment
-comment|//for tests
-end_comment
-
-begin_function
-DECL|method|getReplicasLists
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|List
-argument_list|<
-name|String
-argument_list|>
-argument_list|>
-name|getReplicasLists
-parameter_list|()
-block|{
-return|return
-name|replicasLists
 return|;
 block|}
 end_function
