@@ -1180,329 +1180,6 @@ expr_stmt|;
 name|commit
 argument_list|()
 expr_stmt|;
-name|indexr
-argument_list|(
-name|id
-argument_list|,
-literal|0
-argument_list|,
-literal|"a_t"
-argument_list|,
-literal|"to come to the aid of their country."
-argument_list|)
-expr_stmt|;
-name|CloudJettyRunner
-name|shard1Leader
-init|=
-name|shardToLeaderJetty
-operator|.
-name|get
-argument_list|(
-literal|"shard1"
-argument_list|)
-decl_stmt|;
-name|CloudJettyRunner
-name|shard2Leader
-init|=
-name|shardToLeaderJetty
-operator|.
-name|get
-argument_list|(
-literal|"shard2"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|cloudClient
-operator|.
-name|isUpdatesToLeaders
-argument_list|()
-condition|)
-block|{
-comment|// compare leaders list
-name|assertEquals
-argument_list|(
-literal|2
-argument_list|,
-name|cloudClient
-operator|.
-name|getLeaderUrlLists
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"collection1"
-argument_list|)
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-name|leaderUrlSet
-init|=
-operator|new
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|leaderUrlSet
-operator|.
-name|addAll
-argument_list|(
-name|cloudClient
-operator|.
-name|getLeaderUrlLists
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"collection1"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-literal|"fail check for leader:"
-operator|+
-name|shard1Leader
-operator|.
-name|url
-operator|+
-literal|" in "
-operator|+
-name|leaderUrlSet
-argument_list|,
-name|leaderUrlSet
-operator|.
-name|contains
-argument_list|(
-name|shard1Leader
-operator|.
-name|url
-operator|+
-literal|"/"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-literal|"fail check for leader:"
-operator|+
-name|shard2Leader
-operator|.
-name|url
-operator|+
-literal|" in "
-operator|+
-name|leaderUrlSet
-argument_list|,
-name|leaderUrlSet
-operator|.
-name|contains
-argument_list|(
-name|shard2Leader
-operator|.
-name|url
-operator|+
-literal|"/"
-argument_list|)
-argument_list|)
-expr_stmt|;
-comment|// compare replicas list
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|replicas
-init|=
-operator|new
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|List
-argument_list|<
-name|CloudJettyRunner
-argument_list|>
-name|jetties
-init|=
-name|shardToJetty
-operator|.
-name|get
-argument_list|(
-literal|"shard1"
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|CloudJettyRunner
-name|cjetty
-range|:
-name|jetties
-control|)
-block|{
-name|replicas
-operator|.
-name|add
-argument_list|(
-name|cjetty
-operator|.
-name|url
-argument_list|)
-expr_stmt|;
-block|}
-name|jetties
-operator|=
-name|shardToJetty
-operator|.
-name|get
-argument_list|(
-literal|"shard2"
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|CloudJettyRunner
-name|cjetty
-range|:
-name|jetties
-control|)
-block|{
-name|replicas
-operator|.
-name|add
-argument_list|(
-name|cjetty
-operator|.
-name|url
-argument_list|)
-expr_stmt|;
-block|}
-name|replicas
-operator|.
-name|remove
-argument_list|(
-name|shard1Leader
-operator|.
-name|url
-argument_list|)
-expr_stmt|;
-name|replicas
-operator|.
-name|remove
-argument_list|(
-name|shard2Leader
-operator|.
-name|url
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|replicas
-operator|.
-name|size
-argument_list|()
-argument_list|,
-name|cloudClient
-operator|.
-name|getReplicasLists
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"collection1"
-argument_list|)
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|String
-name|url
-range|:
-name|cloudClient
-operator|.
-name|getReplicasLists
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|"collection1"
-argument_list|)
-control|)
-block|{
-name|assertTrue
-argument_list|(
-literal|"fail check for replica:"
-operator|+
-name|url
-operator|+
-literal|" in "
-operator|+
-name|replicas
-argument_list|,
-name|replicas
-operator|.
-name|contains
-argument_list|(
-name|stripTrailingSlash
-argument_list|(
-name|url
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-DECL|method|stripTrailingSlash
-specifier|private
-name|String
-name|stripTrailingSlash
-parameter_list|(
-name|String
-name|url
-parameter_list|)
-block|{
-if|if
-condition|(
-name|url
-operator|.
-name|endsWith
-argument_list|(
-literal|"/"
-argument_list|)
-condition|)
-block|{
-return|return
-name|url
-operator|.
-name|substring
-argument_list|(
-literal|0
-argument_list|,
-name|url
-operator|.
-name|length
-argument_list|()
-operator|-
-literal|1
-argument_list|)
-return|;
-block|}
-return|return
-name|url
-return|;
 block|}
 annotation|@
 name|Override
